Tried breaking out the Argument class as a base class with a generic subclass ArgumentWithValue<T>

--- a/ArgumentParsing/ArgumentParsing.csproj
+++ b/ArgumentParsing/ArgumentParsing.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Argument.cs" />
+    <Compile Include="ArgumentWithValue.cs" />
     <Compile Include="ArgumentParser.cs" />
     <Compile Include="ArgumentParsingResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
