--- a/ArgumentParsing.Tests/ArgumentParsing.Tests.csproj
+++ b/ArgumentParsing.Tests/ArgumentParsing.Tests.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArgumentParser_UT.cs" />
+    <Compile Include="ArgumentWithValue_UT.cs" />
     <Compile Include="Argument_UT.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringParser_UT.cs" />
