- Added ability to set whether or not the ArgumentParse will allow unknown arguments  - Unknown arguments are now being returned out of the ArgumentParser  - Added constructor to all arguments that just takes a single string (for ease-of-use)

--- a/ArgumentParsing/ArgumentParsing.csproj
+++ b/ArgumentParsing/ArgumentParsing.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Arguments\IntArgument.cs" />
     <Compile Include="Arguments\StringArgument.cs" />
     <Compile Include="ArgumentValueMapper.cs" />
+    <Compile Include="ArgumentValueMapperResult.cs" />
     <Compile Include="IArgumentWithValue.cs" />
     <Compile Include="ArgumentParser.cs" />
     <Compile Include="ArgumentParsingResult.cs" />
